ios scrollbar fix

--- a/platforms/browser/www/css/custom.css
+++ b/platforms/browser/www/css/custom.css
@@ -221,3 +221,6 @@ li.with-border{
   border-radius: 2px;
   background-color: rgba(0,0,0,.4);
 }
+.page-content {
+  -webkit-overflow-scrolling: auto !important;
+}
